<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next button</string>
    <string name="question_count">0/100</string>
    <string name="sampleText">This is where the question goes</string>
    <string name="correct" >correct!</string>
    <string name="incorrect">Dumb ass!</string>
</resources>
